--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,17 +11,17 @@ $neutral-color3: hsl(232, 10%, 55%);
 $neutral-color4: hsl(210, 4%, 67%);
 $neutral-color5: hsl(0, 0%, 100%);
 
-
-
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
 }
 
 body{
     font-family: $font1;
-    color: hsl(210, 4%, 67%);
+    color: $neutral-color4;
+    font-size: 1.125rem;
 }
 
 h1,h2,h3,h4,h5,h6{
@@ -37,10 +37,64 @@ header{
 .menu-wrap{
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+    position: relative;
 }
 
-.menu{
-    display: none;
+.main-menu{
+    width: 100%;
+    left: 0;
+    position: absolute;
+    top: 75px;
+    padding: 40px 20px;
+    background-color: $neutral-color5;
+    transition: all 0.5s ease-in-out;
+    visibility: hidden;
+    opacity: 0;
+
+    .menu ul {
+
+        li{
+            margin-bottom: 35px;
+            list-style-type: none;
+            text-align: center;
+
+            a{
+                text-decoration: none;
+                color: $neutral-color3;
+                display: inline-block;
+            }
+            
+        }
+
+        li:last-child{
+            margin-bottom: 0;
+
+            a{
+                padding: 15px 30px;
+                text-transform: uppercase;
+                background-color: $primary-color2;
+                border-radius: 30px;
+                font-family: $font2;
+                color: $neutral-color1;
+            }
+        }
+    }
+}
+
+.main-menu.active{
+    visibility: visible;
+    opacity: 1;
+}
+
+.main-menu::before{
+    content: "";
+    position: absolute;
+    border-top: 25px solid transparent;
+    border-left: 10px solid transparent;
+    border-right: 25px solid $neutral-color5;
+    top: -25px;
+    right: 0;
 }
 
 .banner-wrap{
@@ -62,6 +116,7 @@ header{
 
     img{
         width: 100%;
+        height: 100%;
     }
 }
 
@@ -93,7 +148,7 @@ header{
     a:before{
         content: "";
         width: 100%;
-        border-bottom: 8px solid hsl(51, 100%, 49%);
+        border-bottom: 8px solid $primary-color2;
         position: absolute;
         bottom: 8px;
         left: 0px;
@@ -104,6 +159,10 @@ header{
 
     a:hover:before{
         opacity: 1;
+    }
+
+    .link-2:before{
+        border-bottom: 8px solid $primary-color1;
     }
 }
 
@@ -131,3 +190,79 @@ header{
 .col-photo{
     background: top/cover no-repeat url(../images/mobile/image-photography.jpg);
 }
+
+.section-4{
+    padding: 36px 24px 28px;
+
+    .col{
+        margin-bottom: 60px;
+    }
+
+    h2{
+        text-transform: uppercase;
+        font-size: 1.125rem;
+        letter-spacing: 3px;
+        margin-bottom: 61px;
+    }
+
+    img{
+        max-width: 74px;
+        border-radius: 50%;
+        margin-bottom: 27px;
+    }
+
+    p{
+        line-height: 1.8;
+        color: $neutral-color3;
+        margin-bottom: 28px;
+    }
+
+    .name{
+        margin-bottom: 4px;
+        font-family: $font2;
+        color: $neutral-color1;
+    }
+
+    .role{
+        font-size: 0.875rem;
+        color: $neutral-color4;
+    }
+}
+
+.section-5 .container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+footer{
+    padding: 60px 24px;
+    text-align: center;
+    background: rgba($primary-color5, .6);
+
+    .logo-footer{
+        max-width: 170px;
+        width: 100%;
+        margin-bottom: 35px;
+    }
+
+    .footer-menu ul,
+    .social-media ul{
+        display: flex;
+        justify-content: space-around;
+        color: #2C7566;
+        gap: 30px;
+        margin-bottom: 90px;
+
+        li{
+            list-style-type: none;
+        }
+    }
+
+    .social-media ul{
+        justify-content: center;
+        gap: 28px;
+        margin-bottom: 0;
+    }
+}
+
+@import 'responsive';
