--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -12,7 +12,8 @@
         }
     }
 
-    .mobile-icon{
+    .mobile-icon,
+    .mobile-img{
         display: none;
     }
 
@@ -34,14 +35,24 @@
             align-items: baseline;
 
             
-            li:last-child{
+            li:last-child a{
                 padding: 15px 24px;
                 background-color: $neutral-color5;
+
+                &:hover{
+                    color: $neutral-color5;
+                    background-color: rgba($neutral-color5, 0.4);
+                }
             }
 
-            a{
+            li a{
                 color: $neutral-color5;
+
+                &:hover{
+                    color: darken($neutral-color5, 20%);
+                }
             }
+            
         }
     }
 
@@ -58,24 +69,139 @@
         }
     }
 
-    .section-1 .container{
+    .section{
+        position: relative;
+    }
+
+    .container{
+        max-width: 1110px;
+        margin: auto;
+    }
+
+    .full{
+        max-width: 100%;
+    }
+
+    .grid{
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-auto-flow: dense;
     }
 
-    .col-image{
-        grid-column: 2/3;
-        background: center/cover no-repeat url(../images/desktop/image-transform.jpg);
+    .col-img{
+        display: none;
+    }
 
-        img{
-            display: none;
+    .section-1,
+    .section-2{
+
+        .col-content{
+            grid-column: 1/2;
+            padding: 140px 0px 160px 0px;
+            max-width: 450px;
+        }
+
+        &::before{
+            content: "";
+            background: center/cover no-repeat url(../images/desktop/image-transform.jpg);
+            width: 50%;
+            height: 100%;
+            position: absolute;
+        }
+    }
+
+    .section-2{
+
+        .col-content{
+            grid-column: 2/3;
+            padding: 160px 0px 160px 0px;
+            max-width: 450px;
+            margin-left: auto;
+        }
+        
+
+        &::before{
+            background: center/cover no-repeat url(../images/desktop/image-stand-out.jpg);
+            left: 0;
         }
     }
 
     .col-content{
-        grid-column: 1/2;
-        padding: 157px 100px 170px 165px;
         text-align: left;
+
+        h2{
+            font-size: 2.5rem;
+            letter-spacing: 1px;
+            margin-bottom: 34px;
+        }
+
+        p{
+            letter-spacing: -0.15px;
+            margin-bottom: 40px;
+        }
+        
+        a{
+            font-size: 1rem;
+            letter-spacing: 0.6px;
+        }
     }
+
+    .col-graph,
+    .col-photo{
+        padding-top: 396px;
+
+        p{
+            max-width: 350px;
+            margin: auto;
+        }
+    }
+
+    .col-graph{
+        background: top/cover no-repeat url(../images/desktop/image-graphic-design.jpg);
+    }
+
+    .col-photo{
+        background: top/cover no-repeat url(../images/desktop/image-photography.jpg);
+    }
+
+    .section-4{
+        padding: 160px 24px 35px;
+
+        h2{
+            font-size: 1.25rem;
+            letter-spacing: 5.8px;
+            margin-bottom: 80px;
+        }
+
+        .testi-wrap{
+           grid-template-columns: repeat(3, 1fr); 
+        }
+
+        img{
+            margin-bottom: 53px;
+        }
+        
+        p{
+            max-width: 350px;
+            margin-left: auto;
+            margin-right: auto;
+            margin-bottom: 65px;
+        }
+    }
+
+    .section-5{
+
+        .container{
+            grid-template-columns: repeat(4, 1fr);
+        }
+    }
+
+    .desktop-img{
+        display: block;
+    }
+
+    footer{
+        padding: 70px 24px;
+    }
+    
 }
